fix the header and adn=min toolbar overlap

--- a/web/themes/custom/realm/assets/css/unify.css
+++ b/web/themes/custom/realm/assets/css/unify.css
@@ -1431,7 +1431,7 @@ hr {
 
 .u-header--sticky-top {
   bottom: auto;
-  top: 0;
+  top: auto;
 }
 
 .u-header--sticky-top.u-negative-top {
