--- a/web/themes/custom/realm/assets/include/scss/base/headers/_headers.scss
+++ b/web/themes/custom/realm/assets/include/scss/base/headers/_headers.scss
@@ -63,7 +63,7 @@
     }
     &-top {
       bottom: auto;
-      top: 0;
+      top: auto;
 
       &.u-negative-top {
         bottom: 100%;
